feat(users): melhora estrutura do invite e add funcionalidade de convidar novamente
